// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder component should be rendered correctly 1`] = `
<span
  className="sto-sections-placeholder"
  style={
    Object {
      "height": "3rem",
      "width": "5rem",
    }
  }
/>
`;

exports[`Placeholder component should be rendered correctly with autoMargin option 1`] = `
<span
  className="sto-sections-placeholder"
  style={
    Object {
      "height": "3rem",
      "margin": "auto",
      "width": "5rem",
    }
  }
/>
`;

exports[`Placeholder component should be rendered correctly with interval of widths 1`] = `
<span
  className="sto-sections-placeholder"
  style={
    Object {
      "height": "3rem",
      "margin": "auto",
      "width": "5rem",
    }
  }
/>
`;
